Enable MAX_POSSIBLE_HEAP to be configurable and add RocketMQ 4.4.0 support (#202)
* Add a common share Dockerfile to build RocketMQ image

* Enable MAX_POSSIBLE_HEAP to be configurable and use shared Dockerfile

* Add README notes for customizable MAX_POSSIBLE_HEAP

* Change 4.2.0 to use its own specified Dockerfile

* Use specific Dockerfile for specific version and add 4.4.0 Dockerfile

* Refactor directory for 4.2.0

* Add README for Dockerfile of every version

* Add guide to play producer/consumer

* Add /Library/Java/JavaVirtualMachines/jdk1.8.0_151.jdk/Contents/Home/lib/ext as java.ext.dirs to support ACL

* Add wait time for remove existing container

* Fix the script to remove running container